(feat) rest builder
