# modules/ticket-rest/ticket-rest-impl/rest-openapi.yaml
@@ -41,6 +41,11 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/Ticket"
                                 type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Ticket"
+                                type: array
                     description: "Tickets retrieved successfully"
 
 
